# SuperManager

./: .gitignore  Cargo.toml  HOSTINDEX-DESIGN.md  README.md  RETROSPECTIVE-tranche-1.md  TAILSCALE-EXITNODE-SELFHEAL-DESIGN.md  UX-AUDIT-2026-06-11.md  WINDOWS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-windows.yml  release.yml
SuperManagerMac/: DISTRIBUTION.md  build.sh  project.yml
SuperManagerMac/Signing/: SuperManagerMac.entitlements  bundle_tailscale.sh  com.sybr.supermanager.helper.plist  disable_nopasswd.sh  enable_nopasswd.sh  install_helper.sh  supermanager-helper.entitlements
SuperManagerMac/SuperManagerMac/: Info.plist  PrivacyInfo.xcprivacy
SuperManagerMac/SuperManagerMac/App/: AppState+Compliance.swift  AppState+Network.swift  AppState+Previews.swift  AppState+Provisioning.swift  AppState+SSH.swift  AppState+Security.swift  AppState+SleepWake.swift  AppState+Tailscale.swift  AppState+UnifiControllers.swift  AppState+VPN.swift  AppState.swift  HostIndex.swift  SuperManagerApp.swift
SuperManagerMac/SuperManagerMac/Models/: AppSettings.swift  AuditEntry.swift  ProvisioningModels.swift  SecurityModels.swift  SshHost.swift  SshKey.swift  TailscalePeer.swift  TailscalePrefs.swift  ToolModels.swift  UnifiController.swift  VpnProfile.swift  WebCapture.swift
SuperManagerMac/SuperManagerMac/Services/: ActivityLog.swift  AuditLog.swift  AzureOAuth.swift  Backup.swift  ClaudeClient.swift  CrashReporter.swift  DebugLog.swift  HelperClient.swift  HelperInstaller.swift  LaunchAtLogin.swift  MasterPassword.swift  NotificationManager.swift  ServiceClient.swift  SparkleUpdater.swift  SubnetDiscovery.swift  SupportBundle.swift  TailscaleClient.swift  VPNKeychain.swift
SuperManagerMac/SuperManagerMac/Views/: AboutSheet.swift  ContentView.swift  ExplainConfigSheet.swift  HelperLogView.swift  LockScreenView.swift  RootView.swift  WelcomeView.swift
SuperManagerMac/SuperManagerMac/Views/Compliance/: ChecksLibrarySheet.swift  ComplianceHostView.swift  ComplianceListColumn.swift
SuperManagerMac/SuperManagerMacTests/: ComplianceDispatchTests.swift  DeviceTypeSchemaDriftTests.swift  DispositionCodableTests.swift  HostIndexTests.swift  RiskBandTests.swift  SubnetDiscoveryTests.swift  VpnProfileConfigDecoderTests.swift
contrib/: build-openvpn3-mac.sh  install.sh  supermgr.desktop
contrib/aur/: PKGBUILD  supermanager-git.install
contrib/dbus/: org.supermgr.Daemon.conf  org.supermgr.Daemon.service
contrib/desktop/: org.supermgr.SuperManager.desktop
contrib/icons/: tray-icon-64.argb32
contrib/man/: supermgr.1  supermgrd.8
contrib/systemd/: supermgrd.service
installer/wix/: build-msi.ps1  bundle.wxs  license.rtf  supermanager.wxs
scripts/: release.sh  sparkle-keygen.sh
scripts/windows/: Get-VendorFiles.ps1  Stage-Openfortivpn.ps1  install-service.ps1  smoke-azure.ps1  smoke-test.ps1  uninstall-service.ps1
supermanager-helper/: Cargo.toml  build.rs
supermanager-helper/resources/: no.sybr.supermanager.vpn-dns-cleanup.plist
supermanager-helper/src/: auto_reconnect.rs  connectivity_watchdog.rs  dns.rs  dns_health_watchdog.rs  fortivpn.rs  kill_switch.rs  main.rs  openvpn.rs  power.rs  route_guardian.rs  strongswan.rs  tailscale.rs  tailscale_state.rs  traffic_capture.rs  wireguard.rs
supermgr/: Cargo.toml
supermgr-core/: Cargo.toml
supermgr-core/src/: client.rs  dbus.rs  error.rs  host.rs  keyring.rs  lib.rs  pipe.rs  protocol.rs
supermgr-core/src/ssh/: audit.rs  device_type.rs  host.rs  key.rs  mod.rs
supermgr-core/src/vpn/: backend.rs  mod.rs  profile.rs  state.rs
supermgr-engine/: Cargo.toml
supermgr-engine/src/: activity_log.rs  anomaly.rs  asset_enrich.rs  azure_oauth.rs  azure_vpn.rs  compliance.rs  creds.rs  customer.rs  cve_feed.rs  device_type_overrides.rs  discovery.rs  dns_axfr.rs  dns_health.rs  engagement.rs  error.rs  findings_store.rs  fortigate.rs  ldap_enum.rs  lib.rs  netdetect.rs  notify.rs  operations.rs  pcap_binary.rs  probes.rs  protocol.rs  provisioning.rs  remediation.rs  report.rs  risk.rs  scheduler.rs  server.rs  smb_enum.rs  snmp_walk.rs  ssh_compliance.rs  state.rs  subdomain_enum.rs  tools.rs  traffic_sniff.rs  unifi.rs  unifi_controllers.rs  (+3 more)
supermgr-engine/src/handlers/: compliance.rs  customer.rs  discovery.rs  engagement.rs  findings.rs  fortigate.rs  mod.rs  notifications.rs  operations.rs  provisioning.rs  security_ops.rs  ssh.rs  tailscale.rs  timeline.rs  tools.rs  unifi.rs  vpn.rs
supermgr-engine/src/secrets/: file.rs  keychain.rs  mod.rs
supermgr-engine/src/ssh/: audit.rs  connection.rs  known_hosts.rs  mod.rs  push.rs
supermgr-engine/src/templates/: fortigate_branch_office.tera  fortigate_hq.tera  unifi_wifi_basic.tera
supermgr-engine/tests/: rpc_roundtrip.rs
supermgr-mcp/: Cargo.toml  build.rs
supermgr-mcp/src/: main.rs
supermgr-win/: Cargo.toml  build.rs
supermgr-win/src/: main.rs
supermgr-win/src/win/: mod.rs  tray.rs
supermgr-win/ui/: main.slint
supermgr/src/: app.rs  dbus_client.rs  main.rs  master_password.rs  settings.rs  tray.rs
supermgr/src/ui/: mod.rs  navigation.rs
supermgr/src/ui/console/: claude.rs  mod.rs  panel.rs
supermgr/src/ui/provisioning/: mod.rs  wizard.rs
supermgr/src/ui/ssh/: dashboard.rs  dialogs.rs  host_detail.rs  host_tree.rs  key_detail.rs  key_list.rs  mod.rs
supermgr/src/ui/vpn/: detail.rs  dialogs.rs  mod.rs  sidebar.rs
supermgrd/: Cargo.toml
supermgrd-mac/: Cargo.toml
supermgrd-mac/src/: main.rs
supermgrd-win/: Cargo.toml  build.rs
supermgrd-win/src/: main.rs
supermgrd-win/src/win/: appliance.rs  daemon.rs  dispatch.rs  known_hosts.rs  mod.rs  paths.rs  pipe_acl.rs  pipe_server.rs  profile_store.rs  ssh_exec.rs
supermgrd-win/src/win/vpn/: azure.rs  forticlient.rs  fortigate.rs  mod.rs  openvpn.rs  wireguard.rs
supermgrd/src/: audit.rs  backup_retention.rs  daemon.rs  docs.rs  fortigate.rs  main.rs  opnsense.rs  secrets.rs  sophos.rs  tailscale.rs
supermgrd/src/ssh/: audit.rs  connection.rs  import.rs  keygen.rs  mod.rs  revoke.rs
supermgrd/src/vpn/: azure.rs  fortigate.rs  mod.rs  openvpn.rs  wireguard.rs
(+62 files in other folders)
