[package]
name        = "supermgr-core"
version     = "1.0.0"
edition     = "2021"
description = "Shared types, D-Bus interface definitions, and backend trait for SuperManager"
license     = "GPL-3.0-or-later"

[dependencies]
async-trait    = { workspace = true }
chrono         = { workspace = true }
ipnet          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
ssh-key        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
zeroize        = { workspace = true }

# macOS: use security-framework for Keychain access
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.2"

# Linux: D-Bus and Secret Service (GNOME Keyring)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { workspace = true }
zbus           = { workspace = true }

[lints]
workspace = true
