[package]
name        = "supermgr-core"
version     = "1.0.0"
edition     = "2021"
description = "Shared types, D-Bus interface definitions, and backend trait for SuperManager"
license     = "GPL-3.0-or-later"

[dependencies]
async-trait    = { workspace = true }
chrono         = { workspace = true }
ipnet          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
ssh-key        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
uuid           = { workspace = true }
zeroize        = { workspace = true }

# macOS: use security-framework for Keychain access
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.2"

# Linux: D-Bus and Secret Service (GNOME Keyring)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { workspace = true }
zbus           = { workspace = true }

# Windows: Credential Manager (via the `keyring` crate's win-native
# backend, which wraps `CredReadW` / `CredWriteW` / `CredDeleteW`).
# We also need tokio's Windows-only named-pipe types for the daemon
# IPC client — those live behind `tokio::net::windows::named_pipe`
# which is gated on `cfg(windows)` in tokio itself, so no extra
# feature flag is required here.
[target.'cfg(target_os = "windows")'.dependencies]
keyring        = { version = "3.6", default-features = false, features = ["windows-native"] }

[lints]
workspace = true
