[package]
name        = "supermgr-engine"
version     = "0.1.0"
edition     = "2021"
description = "Cross-platform SuperManager daemon engine — SSH, secrets, and JSON-RPC server"
license     = "GPL-3.0-or-later"

[dependencies]
supermgr-core   = { path = "../supermgr-core" }

anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
chrono          = { workspace = true }
ipnet           = { workspace = true }
rand            = { workspace = true }
reqwest         = { workspace = true }
rsa             = { workspace = true }
russh           = { workspace = true }
russh-keys      = { workspace = true }
russh-sftp      = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
ssh-key         = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
tera            = { workspace = true }
tracing         = { workspace = true }
uuid            = { workspace = true }
zeroize         = { workspace = true }
# Secure temp files — random suffix + 0o600 mode + auto-unlink on drop.
# Used by `report::render_pdf` so /tmp paths can't be symlink-hijacked.
tempfile        = "3"

# macOS Keychain backend for the SecretStore trait. Linux builds skip this
# entirely (see supermgr_engine::secrets); the file-based store remains the
# Linux fallback.
[target.'cfg(target_os = "macos")'.dependencies]
# `OSX_10_15` enables the Data Protection Keychain shim — the modern
# (entitlement / access-group based) keychain whose ACL is *not* pinned
# to the calling app's cdhash.
security-framework = { version = "2.11", features = ["OSX_10_15"] }
security-framework-sys = "2.11"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[dev-dependencies]
tempfile = "3"
# Property-based testing — fuzz parsers + matchers with arbitrary
# inputs to catch panics that targeted unit tests would miss.
proptest = "1.5"
# Used by integration tests/rpc_roundtrip.rs to send requests
# over a real Unix socket. Workspace tokio is enough since
# test binaries inherit the same async runtime config.
serde_json = { workspace = true }
tokio = { workspace = true }

# The keychain module talks to the macOS Security framework via raw
# extern "C" calls (SecItemAdd/SecItemUpdate/SecItemCopyMatching/SecItemDelete)
# because the higher-level `set_generic_password` helper in the
# `security-framework` crate doesn't expose `kSecUseDataProtectionKeychain`.
# Each of those FFI calls is necessarily unsafe. We override the workspace
# default of `unsafe_code = forbid` and re-state the rest of the workspace
# clippy lints by hand — same posture used by `supermanager-helper`.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
