[package]
name = "supermgr-mcp"
version     = "1.0.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for SuperManager — exposes SSH/VPN operations as tools for Claude Code."

[dependencies]
supermgr-core = { path = "../supermgr-core" }

# Async runtime
tokio       = { workspace = true }

# Serialization
serde       = { workspace = true }
serde_json  = { workspace = true }

# Error handling
anyhow      = { workspace = true }

# Logging
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

# D-Bus connection (used only on Linux to talk to supermgrd). The supermgr-core
# `client::connect()` helper handles the transport selection, but the type is
# needed for the trait bound on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
zbus        = { workspace = true }

# Embeds the Windows version resource so File Explorer's Properties
# dialog shows the right metadata on supermgr-mcp.exe. The build.rs
# checks `cfg(target_os = "windows")` at compile time so non-Windows
# builds skip the resource compile cleanly.
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
