[package]
name        = "supermgrd"
version     = "1.0.0"
edition     = "2021"
description = "Privileged SuperManager daemon — systemd service with a D-Bus interface"
license     = "GPL-3.0-or-later"

[[bin]]
name = "supermgrd"
path = "src/main.rs"

[dependencies]
supermgr-core   = { path = "../supermgr-core" }

anyhow          = { workspace = true }
async-trait     = { workspace = true }
base64          = { workspace = true }
chrono          = { workspace = true }
ipnet           = { workspace = true }
rand            = { workspace = true }
reqwest         = { workspace = true }
rsa             = { workspace = true }
russh           = { workspace = true }
russh-keys      = { workspace = true }
russh-sftp      = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
ssh-key         = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
uuid            = { workspace = true }
zbus            = { workspace = true }
zeroize         = { workspace = true }

# WireGuard kernel netlink control (no subprocess required)
wireguard-control = { workspace = true }

# Unix user/group inspection (uid root check) and network interface index lookup
nix             = { version = "0.29", features = ["user", "net", "signal", "fs"] }

# Netlink for address assignment, interface deletion, and route management
rtnetlink              = "0.14"
netlink-packet-route   = "0.19"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Backup retention compresses files older than 7 days to gzip in place
# (the format is universally readable by zcat / less / gzip on every distro
# we target, so on-call doesn't need a special tool).
flate2 = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
